# aqc-shared

./: .dupes-ignore.toml  .gitignore  CONVENTIONS.md  Cargo.toml  LICENSE-APACHE  README.md  cliff.toml  clippy.toml  fixture3.yaml  guardrail3-rs.toml  release-plz.toml
.githooks/: pre-commit  (+1 more)
fixtures/probes/exact-list-differences/: Cargo.toml
fixtures/probes/exact-list-differences/src/: main.rs
fixtures/probes/shakts-pnpm-aqc/: Cargo.toml  guardrail3-rs.toml
fixtures/probes/shakts-pnpm-aqc/src/: main.rs
fixtures/probes/shakts-tsc-aqc/: Cargo.toml  guardrail3-rs.toml
fixtures/probes/shakts-tsc-aqc/src/: main.rs
tools/aqc-requirement-architecture/: Cargo.toml  deny.toml  guardrail3-rs.toml
tools/aqc-requirement-architecture/src/: analyze.rs  discover.rs  expression.rs  fs.rs  lib.rs  main.rs  model.rs  output.rs
tools/aqc-requirement-architecture/tests/: architecture_tests.rs
tools/aqc-requirement-architecture/tests/fixtures/accepted/adapter/: Cargo.toml
tools/aqc-requirement-architecture/tests/fixtures/accepted/core/: guardrail3-rs.toml
tools/aqc-requirement-architecture/tests/fixtures/accepted/engine/: Cargo.toml
tools/aqc-requirement-architecture/tests/fixtures/accepted/external-membership/: Cargo.toml
tools/aqc-requirement-architecture/tests/fixtures/canonical-facade/: Cargo.toml
tools/aqc-requirement-architecture/tests/fixtures/counterfeit-consumer/: Cargo.toml
tools/aqc-requirement-architecture/tests/fixtures/counterfeit-core/: Cargo.toml  guardrail3-rs.toml
tools/aqc-requirement-architecture/tests/fixtures/custom-source/: Cargo.toml  lib.rs  nested_alias.rs  requirements.rs
tools/aqc-requirement-architecture/tests/fixtures/duplicate-facade/: Cargo.toml  guardrail3-rs.toml
tools/aqc-requirement-architecture/tests/fixtures/duplicate-facade-consumer/: Cargo.toml
tools/aqc-requirement-architecture/tests/fixtures/inventory/: Cargo.toml  guardrail3-rs.toml
tools/aqc-requirement-architecture/tests/fixtures/macro-only/: Cargo.toml  guardrail3-rs.toml
tools/aqc-requirement-architecture/tests/fixtures/mixed-facade/: Cargo.toml
tools/aqc-requirement-architecture/tests/fixtures/mixed-facade-consumer/: Cargo.toml
tools/aqc-requirement-architecture/tests/fixtures/rejected/: Cargo.toml
tools/aqc-requirement-architecture/tests/fixtures/requirement-facade-a/: Cargo.toml
tools/aqc-requirement-architecture/tests/fixtures/requirement-facade-b/: Cargo.toml
tools/aqc-requirement-architecture/tests/fixtures/requirement-facade-consumer/: Cargo.toml
(+240 files in other folders)
