[package]
name = "shakts-pnpm-aqc-fixture-probe"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
publish = false

[workspace]
resolver = "3"

[dependencies]
aqc-file-engine-core = "0.7.0"
aqc-json-engine-core = "0.7.0"
aqc-package-json-engine = "0.7.0"
aqc-yaml-engine-core = "0.7.0"
aqc-pnpm-workspace-yaml-engine = "0.7.0"
serde_json = "1"
