[package]
name = "shakts-tsc-aqc-fixture-probe"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
publish = false

[workspace]
resolver = "3"

[dependencies]
aqc-file-engine-core = "0.7.1"
aqc-jsonc-engine-core = "0.8.0"
aqc-package-json-engine = "0.8.0"
aqc-tsconfig-json-engine = "0.8.0"
serde_json = "1"
